# 2DNBodySim

./: .gitignore  2  CMakeLists.txt  README.md
.cache/clangd/index/: app.cpp.D4D4B1C9CC0F9F82.idx  app.h.025672346BFA9BC8.idx  camera.h.80A4CC226AA3009F.idx  glad.c.B8C39AE29BBBEF4F.idx  glad.c.ED413B595082818E.idx  glad.h.528A8B0EF25FDA06.idx  glad.h.BB8FF2085D171FF6.idx  khrplatform.h.23E82CF3C4F5E747.idx  khrplatform.h.2BE28A8E896781C8.idx  main.cpp.1DF18CD87A608BFC.idx  main.cpp.B16B0337D9CDD35C.idx  shader.h.FDAF2C9928AAF639.idx  simulation.cpp.CDF0090D3097DC7D.idx  simulation.h.0271E36540D3D803.idx  stb_image.h.82B5F93F590968F4.idx  util.cpp.79C5F25291C8568A.idx  util.h.4EF128BFCB1661BF.idx
res/: frag.glsl  vert.glsl
src/: app.cpp  app.h  camera.h  main.cpp  renderer.h  shader.h  simulation.cpp  simulation.h  util.cpp  util.h  util.hpp
